F222 Upgrade to JUnit 5
* Remove JUnit 4 usage.
* Update all tests to JUnit 5 and Mockito.