@@ -18,12 +18,13 @@
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
  */
-
 package org.dbunit.dataset.datatype;
 
-import org.dbunit.database.ExtendedMockSingleRowResultSet;
-import org.dbunit.dataset.ITable;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.jupiter.api.Assertions.fail;
+import static org.mockito.Mockito.lenient;
 
+import java.sql.ResultSet;
 import java.sql.Time;
 import java.sql.Timestamp;
 import java.sql.Types;
@@ -31,82 +32,88 @@ import java.time.Clock;
 import java.time.LocalTime;
 import java.time.temporal.ChronoUnit;
 
+import org.dbunit.dataset.ITable;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.Mock;
+import org.mockito.junit.jupiter.MockitoExtension;
+
 /**
  * @author Manuel Laflamme
  * @version $Revision$
  */
-
+@ExtendWith(MockitoExtension.class)
 public class TimeDataTypeTest extends AbstractDataTypeTest
 {
     private final static DataType THIS_TYPE = DataType.TIME;
 
-    public TimeDataTypeTest(String name)
-    {
-        super(name);
-    }
+    @Mock
+    private ResultSet mockedResultSet;
 
+    @Override
+    @Test
     public void testToString() throws Exception
     {
-        assertEquals("name", "TIME", THIS_TYPE.toString());
+        assertThat(THIS_TYPE.toString()).as("name").isEqualTo("TIME");
     }
 
+    @Override
+    @Test
     public void testGetTypeClass() throws Exception
     {
-        assertEquals("class", Time.class, THIS_TYPE.getTypeClass());
+        assertThat(THIS_TYPE.getTypeClass()).as("class").isEqualTo(Time.class);
     }
 
+    @Override
+    @Test
     public void testIsNumber() throws Exception
     {
-        assertEquals("is number", false, THIS_TYPE.isNumber());
+        assertThat(THIS_TYPE.isNumber()).as("is number").isFalse();
     }
 
+    @Override
+    @Test
     public void testIsDateTime() throws Exception
     {
-        assertEquals("is date/time", true, THIS_TYPE.isDateTime());
+        assertThat(THIS_TYPE.isDateTime()).as("is date/time").isTrue();
     }
 
+    @Override
+    @Test
     public void testTypeCast() throws Exception
     {
-        Object[] values = {
-            null,
-            new Time(1234),
-            new java.sql.Date(1234),
-            new Timestamp(1234),
-            new Time(1234).toString(),
-            new java.util.Date(1234),
-        };
+        final Object[] values = {null, new Time(1234), new java.sql.Date(1234),
+                new Timestamp(1234), new Time(1234).toString(),
+                new java.util.Date(1234),};
 
-        java.sql.Time[] expected = {
-            null,
-            new Time(1234),
-            new Time(new java.sql.Date(1234).getTime()),
-            new Time(new Timestamp(1234).getTime()),
-            Time.valueOf(new Time(1234).toString()),
-            new Time(1234),
-        };
+        final java.sql.Time[] expected = {null, new Time(1234),
+                new Time(new java.sql.Date(1234).getTime()),
+                new Time(new Timestamp(1234).getTime()),
+                Time.valueOf(new Time(1234).toString()), new Time(1234),};
 
-        assertEquals("actual vs expected count", values.length, expected.length);
+        assertThat(expected).as("actual vs expected count")
+                .hasSameSizeAs(values);
 
         for (int i = 0; i < values.length; i++)
         {
-            assertEquals("typecast " + i, expected[i],
-                    THIS_TYPE.typeCast(values[i]));
+            assertThat(THIS_TYPE.typeCast(values[i])).as("typecast " + i)
+                    .isEqualTo(expected[i]);
         }
     }
 
+    @Override
+    @Test
     public void testTypeCastNone() throws Exception
     {
-        assertEquals("typecast", null, THIS_TYPE.typeCast(ITable.NO_VALUE));
+        assertThat(THIS_TYPE.typeCast(ITable.NO_VALUE)).as("typecast").isNull();
     }
 
+    @Override
+    @Test
     public void testTypeCastInvalid() throws Exception
     {
-        Object[] values = {
-            new Integer(1234),
-            new Object(),
-            "bla",
-            "2000.05.05",
-        };
+        final Object[] values =
+                {Integer.valueOf(1234), new Object(), "bla", "2000.05.05",};
 
         for (int i = 0; i < values.length; i++)
         {
@@ -114,27 +121,27 @@ public class TimeDataTypeTest extends AbstractDataTypeTest
             {
                 THIS_TYPE.typeCast(values[i]);
                 fail("Should throw TypeCastException - " + i);
-            }
-            catch (TypeCastException e)
+            } catch (final TypeCastException e)
             {
             }
         }
     }
 
-    public void testTypeCastRelative() throws Exception
+    @Test
+    void testTypeCastRelative() throws Exception
     {
         // @formatter:off
-        Object[] values = {
+        final Object[] values = {
                 "[now]",
                 "[NOW +1h]",
                 "[Now -3m -2h]",
                 "[NOW+5s]",
         };
 
-        Clock clock = DataType.RELATIVE_DATE_TIME_PARSER.getClock();
+        final Clock clock = DataType.RELATIVE_DATE_TIME_PARSER.getClock();
 
-        LocalTime now = LocalTime.now(clock);
-        Time[] expected = {
+        final LocalTime now      = LocalTime.now(clock);
+        final Time[]    expected = {
                 Time.valueOf(now),
                 Time.valueOf(now.plus(1, ChronoUnit.HOURS)),
                 Time.valueOf(now.plus(-3, ChronoUnit.MINUTES).plus(-2, ChronoUnit.HOURS)),
@@ -142,65 +149,52 @@ public class TimeDataTypeTest extends AbstractDataTypeTest
         };
         // @formatter:on
 
-        assertEquals("actual vs expected count", values.length,
-                expected.length);
+        assertThat(expected).as("actual vs expected count")
+                .hasSameSizeAs(values);
 
         // Create a new instance to test relative date/time.
-        TimeDataType thisType = new TimeDataType();
+        final TimeDataType thisType = new TimeDataType();
         for (int i = 0; i < values.length; i++)
         {
-            assertEquals("typecast " + i, expected[i],
-                    thisType.typeCast(values[i]));
+            assertThat(thisType.typeCast(values[i])).as("typecast " + i)
+                    .isEqualTo(expected[i]);
         }
     }
 
+    @Override
+    @Test
     public void testCompareEquals() throws Exception
     {
-        Object[] values1 = {
-            null,
-            new Time(1234),
-            new java.sql.Date(1234),
-            new Timestamp(1234),
-            new Time(1234).toString(),
-            new java.util.Date(1234),
-            "00:01:02",
-        };
+        final Object[] values1 = {null, new Time(1234), new java.sql.Date(1234),
+                new Timestamp(1234), new Time(1234).toString(),
+                new java.util.Date(1234), "00:01:02",};
 
-        Object[] values2 = {
-            null,
-            new Time(1234),
-            new Time(new java.sql.Date(1234).getTime()),
-            new Time(new Timestamp(1234).getTime()),
-            Time.valueOf(new Time(1234).toString()),
-            new Time(1234),
-            new Time(0, 1, 2),
-        };
+        final Object[] values2 = {null, new Time(1234),
+                new Time(new java.sql.Date(1234).getTime()),
+                new Time(new Timestamp(1234).getTime()),
+                Time.valueOf(new Time(1234).toString()), new Time(1234),
+                new Time(0, 1, 2),};
 
-        assertEquals("values count", values1.length, values2.length);
+        assertThat(values2).as("values count").hasSameSizeAs(values1);
 
         for (int i = 0; i < values1.length; i++)
         {
-            assertEquals("compare1 " + i, 0, THIS_TYPE.compare(values1[i], values2[i]));
-            assertEquals("compare2 " + i, 0, THIS_TYPE.compare(values2[i], values1[i]));
+            assertThat(THIS_TYPE.compare(values1[i], values2[i]))
+                    .as("compare1 " + i).isZero();
+            assertThat(THIS_TYPE.compare(values2[i], values1[i]))
+                    .as("compare2 " + i).isZero();
         }
     }
 
+    @Override
+    @Test
     public void testCompareInvalid() throws Exception
     {
-        Object[] values1 = {
-            new Integer(1234),
-            new Object(),
-            "bla",
-            "2000.05.05",
-        };
-        Object[] values2 = {
-            null,
-            null,
-            null,
-            null,
-        };
+        final Object[] values1 =
+                {Integer.valueOf(1234), new Object(), "bla", "2000.05.05",};
+        final Object[] values2 = {null, null, null, null,};
 
-        assertEquals("values count", values1.length, values2.length);
+        assertThat(values2).as("values count").hasSameSizeAs(values1);
 
         for (int i = 0; i < values1.length; i++)
         {
@@ -208,8 +202,7 @@ public class TimeDataTypeTest extends AbstractDataTypeTest
             {
                 THIS_TYPE.compare(values1[i], values2[i]);
                 fail("Should throw TypeCastException - " + i);
-            }
-            catch (TypeCastException e)
+            } catch (final TypeCastException e)
             {
             }
 
@@ -217,91 +210,92 @@ public class TimeDataTypeTest extends AbstractDataTypeTest
             {
                 THIS_TYPE.compare(values1[i], values2[i]);
                 fail("Should throw TypeCastException - " + i);
-            }
-            catch (TypeCastException e)
+            } catch (final TypeCastException e)
             {
             }
         }
     }
 
+    @Override
+    @Test
     public void testCompareDifferent() throws Exception
     {
-        Object[] less = {
-            null,
-            new java.sql.Time(0),
-            "08:00:00",
-            "08:00:00",
-        };
+        final Object[] less =
+                {null, new java.sql.Time(0), "08:00:00", "08:00:00",};
 
-        Object[] greater = {
-            new java.sql.Time(1234),
-            new java.sql.Time(System.currentTimeMillis()),
-            "20:00:00",
-            "08:00:01",
-        };
+        final Object[] greater = {new java.sql.Time(1234),
+                new java.sql.Time(System.currentTimeMillis()), "20:00:00",
+                "08:00:01",};
 
-        assertEquals("values count", less.length, greater.length);
+        assertThat(greater).as("values count").hasSameSizeAs(less);
 
         for (int i = 0; i < less.length; i++)
         {
-            assertTrue("less " + i, THIS_TYPE.compare(less[i], greater[i]) < 0);
-            assertTrue("greater " + i, THIS_TYPE.compare(greater[i], less[i]) > 0);
+            assertThat(THIS_TYPE.compare(less[i], greater[i])).as("less " + i)
+                    .isNegative();
+            assertThat(THIS_TYPE.compare(greater[i], less[i]))
+                    .as("greater " + i).isPositive();
         }
     }
 
+    @Override
+    @Test
     public void testSqlType() throws Exception
     {
-        assertEquals(THIS_TYPE, DataType.forSqlType(Types.TIME));
-        assertEquals("forSqlTypeName", THIS_TYPE, DataType.forSqlTypeName(THIS_TYPE.toString()));
-        assertEquals(Types.TIME, THIS_TYPE.getSqlType());
+        assertThat(DataType.forSqlType(Types.TIME)).isEqualTo(THIS_TYPE);
+        assertThat(DataType.forSqlTypeName(THIS_TYPE.toString()))
+                .as("forSqlTypeName").isEqualTo(THIS_TYPE);
+        assertThat(THIS_TYPE.getSqlType()).isEqualTo(Types.TIME);
     }
 
     /**
      *
      */
+    @Override
+    @Test
     public void testForObject() throws Exception
     {
-        assertEquals(THIS_TYPE, DataType.forObject(new Time(1234)));
+        assertThat(DataType.forObject(new Time(1234))).isEqualTo(THIS_TYPE);
     }
 
+    @Override
+    @Test
     public void testAsString() throws Exception
     {
-        java.sql.Time[] values = {
-            new java.sql.Time(1234),
-        };
+        final java.sql.Time[] values = {new java.sql.Time(1234),};
 
-        String[] expected = {
-            new java.sql.Time(1234).toString(),
-        };
+        final String[] expected = {new java.sql.Time(1234).toString(),};
 
-
-        assertEquals("actual vs expected count", values.length, expected.length);
+        assertThat(expected).as("actual vs expected count")
+                .hasSameSizeAs(values);
 
         for (int i = 0; i < values.length; i++)
         {
-            assertEquals("asString " + i, expected[i], DataType.asString(values[i]));
+            assertThat(DataType.asString(values[i])).as("asString " + i)
+                    .isEqualTo(expected[i]);
         }
     }
 
+    @Override
+    @Test
     public void testGetSqlValue() throws Exception
     {
-        java.sql.Time[] expected = {
-            null,
-            new Time(1234),
-            new Time(new java.sql.Date(1234).getTime()),
-            new Time(new Timestamp(1234).getTime()),
-            Time.valueOf(new Time(1234).toString()),
-            new Time(1234),
-        };
+        final java.sql.Time[] expected = {null, new Time(1234),
+                new Time(new java.sql.Date(1234).getTime()),
+                new Time(new Timestamp(1234).getTime()),
+                Time.valueOf(new Time(1234).toString()), new Time(1234),};
 
-        ExtendedMockSingleRowResultSet resultSet = new ExtendedMockSingleRowResultSet();
-        resultSet.addExpectedIndexedValues(expected);
-
+        lenient().when(mockedResultSet.getTime(2)).thenReturn(expected[1]);
+        lenient().when(mockedResultSet.getTime(3)).thenReturn(expected[2]);
+        lenient().when(mockedResultSet.getTime(4)).thenReturn(expected[3]);
+        lenient().when(mockedResultSet.getTime(5)).thenReturn(expected[4]);
+        lenient().when(mockedResultSet.getTime(6)).thenReturn(expected[5]);
         for (int i = 0; i < expected.length; i++)
         {
-            Object expectedValue = expected[i];
-            Object actualValue = THIS_TYPE.getSqlValue(i + 1, resultSet);
-            assertEquals("value", expectedValue, actualValue);
+            final Object expectedValue = expected[i];
+            final Object actualValue =
+                    THIS_TYPE.getSqlValue(i + 1, mockedResultSet);
+            assertThat(actualValue).as("value").isEqualTo(expectedValue);
         }
     }
 
