@@ -20,7 +20,8 @@
  */
 package org.dbunit.dataset.excel;
 
-import java.io.File;
+import static org.assertj.core.api.Assertions.assertThat;
+
 import java.math.BigDecimal;
 import java.util.TimeZone;
 
@@ -30,6 +31,7 @@ import org.dbunit.dataset.IDataSet;
 import org.dbunit.dataset.ITable;
 import org.dbunit.dataset.datatype.DataType;
 import org.dbunit.testutil.TestUtils;
+import org.junit.jupiter.api.Test;
 
 /**
  * @author Manuel Laflamme
@@ -39,17 +41,12 @@ import org.dbunit.testutil.TestUtils;
  */
 public class XlsTableTest extends AbstractTableTest
 {
-//    private static final long ONE_SECOND_IN_MILLIS = 1000;
-//    private static final long ONE_MINUTE_IN_MILLIS = 60 * 1000;
-//    private static final long ONE_HOUR_IN_MILLIS = 60 * ONE_MINUTE_IN_MILLIS;
-//    private static final long ONE_DAY_IN_MILLIS = 24 * ONE_HOUR_IN_MILLIS;
-    
-    
-    public XlsTableTest(String s)
-    {
-        super(s);
-    }
+    // private static final long ONE_SECOND_IN_MILLIS = 1000;
+    // private static final long ONE_MINUTE_IN_MILLIS = 60 * 1000;
+    // private static final long ONE_HOUR_IN_MILLIS = 60 * ONE_MINUTE_IN_MILLIS;
+    // private static final long ONE_DAY_IN_MILLIS = 24 * ONE_HOUR_IN_MILLIS;
 
+    @Override
     protected ITable createTable() throws Exception
     {
         return createDataSet().getTable("TEST_TABLE");
@@ -60,108 +57,121 @@ public class XlsTableTest extends AbstractTableTest
         return new XlsDataSet(TestUtils.getFile("xml/tableTest.xls"));
     }
 
+    @Override
+    @Test
     public void testGetMissingValue() throws Exception
     {
-        int row = 0;
-        Object[] expected = {"row 0 col 0", null, "row 0 col 2"};
+        final int row = 0;
+        final Object[] expected = {"row 0 col 0", null, "row 0 col 2"};
 
-        ITable table = createDataSet().getTable("MISSING_VALUES");
+        final ITable table = createDataSet().getTable("MISSING_VALUES");
 
-        Column[] columns = table.getTableMetaData().getColumns();
-        assertEquals("column count", expected.length, columns.length);
-        assertEquals("row count", 1, table.getRowCount());
+        final Column[] columns = table.getTableMetaData().getColumns();
+        assertThat(columns).as("column count").hasSameSizeAs(expected);
+        assertThat(table.getRowCount()).as("row count").isEqualTo(1);
         for (int i = 0; i < columns.length; i++)
         {
-            assertEquals("value " + i, expected[i],
-                    table.getValue(row, columns[i].getColumnName()));
+            assertThat(table.getValue(row, columns[i].getColumnName()))
+                    .as("value " + i).isEqualTo(expected[i]);
         }
     }
-    
-    public void testEmptyTableColumns() throws Exception
-    {
-    	Column[] expectedColumns = new Column[] {
-    			new Column("COLUMN0", DataType.UNKNOWN),
-    			new Column("COLUMN1", DataType.UNKNOWN),
-    			new Column("COLUMN2", DataType.UNKNOWN),
-    			new Column("COLUMN3", DataType.UNKNOWN)
-    	};
-        ITable table = createDataSet().getTable("EMPTY_TABLE");
 
-        Column[] columns = table.getTableMetaData().getColumns();
-    	assertEquals("Column count", expectedColumns.length, columns.length);
-    	for (int i = 0; i < columns.length; i++) {
-			assertEquals("Column " + i, expectedColumns[i], columns[i]);
-		}
-    }
-    
-    public void testEmptySheet() throws Exception
+    @Test
+    void testEmptyTableColumns() throws Exception
     {
-        ITable table = createDataSet().getTable("EMPTY_SHEET");
+        final Column[] expectedColumns =
+                new Column[] {new Column("COLUMN0", DataType.UNKNOWN),
+                        new Column("COLUMN1", DataType.UNKNOWN),
+                        new Column("COLUMN2", DataType.UNKNOWN),
+                        new Column("COLUMN3", DataType.UNKNOWN)};
+        final ITable table = createDataSet().getTable("EMPTY_TABLE");
 
-        Column[] columns = table.getTableMetaData().getColumns();
-    	assertEquals("Column count", 0, columns.length);
+        final Column[] columns = table.getTableMetaData().getColumns();
+        assertThat(columns).as("Column count").hasSameSizeAs(expectedColumns);
+        for (int i = 0; i < columns.length; i++)
+        {
+            assertThat(columns[i]).as("Column " + i)
+                    .isEqualTo(expectedColumns[i]);
+        }
     }
 
-    
-    public void testDifferentDatatypes() throws Exception
+    @Test
+    void testEmptySheet() throws Exception
     {
-        int row = 0;
-        ITable table = createDataSet().getTable("TABLE_DIFFERENT_DATATYPES");
-        
+        final ITable table = createDataSet().getTable("EMPTY_SHEET");
+
+        final Column[] columns = table.getTableMetaData().getColumns();
+        assertThat(columns).as("Column count").isEmpty();
+    }
+
+    @Test
+    void testDifferentDatatypes() throws Exception
+    {
+        final int row = 0;
+        final ITable table =
+                createDataSet().getTable("TABLE_DIFFERENT_DATATYPES");
+
         // When cell type is numeric and cell value is datetime,
         // Apache-POI returns datetime with system default timezone offset.
-        // And java.util.Date#getTime() returns time without timezone offset (= UTC).
-        // So actual time values in this case will be UTC time in the system default timezone.
-        // Expected time values also should be UTC time in the system default timezone.
-        long tzOffset = TimeZone.getDefault().getRawOffset();
-        Object[] expected = {
-//                new Date(0-tzOffset), 
-//                new Date(0-tzOffset + (10*ONE_HOUR_IN_MILLIS + 45*ONE_MINUTE_IN_MILLIS)),
-//                new Date(0-tzOffset + (13*ONE_HOUR_IN_MILLIS + 30*ONE_MINUTE_IN_MILLIS + 55*ONE_SECOND_IN_MILLIS) ),
-//                new Long(25569),// Dates stored as Long numbers
-//                new Long(25569447916666668L),
-//                new Long(563136574074074L),
-                new Long(0-tzOffset),// Dates stored as Long numbers
-                new Long(38700000-tzOffset),
-                new Long(-2209026545000L-tzOffset),
-                new BigDecimal("10000.00"), 
-                new BigDecimal("-200"), 
+        // And java.util.Date#getTime() returns time without timezone offset (=
+        // UTC).
+        // So actual time values in this case will be UTC time in the system
+        // default timezone.
+        // Expected time values also should be UTC time in the system default
+        // timezone.
+        final long tzOffset = TimeZone.getDefault().getRawOffset();
+        final Object[] expected = {
+                // new Date(0-tzOffset),
+                // new Date(0-tzOffset + (10*ONE_HOUR_IN_MILLIS +
+                // 45*ONE_MINUTE_IN_MILLIS)),
+                // new Date(0-tzOffset + (13*ONE_HOUR_IN_MILLIS +
+                // 30*ONE_MINUTE_IN_MILLIS + 55*ONE_SECOND_IN_MILLIS) ),
+                // Long.valueOf(25569),// Dates stored as Long numbers
+                // Long.valueOf(25569447916666668L),
+                // Long.valueOf(563136574074074L),
+                Long.valueOf(0 - tzOffset), // Dates stored as Long numbers
+                Long.valueOf(38700000 - tzOffset),
+                Long.valueOf(-2209026545000L - tzOffset),
+                new BigDecimal("10000.00"), new BigDecimal("-200"),
                 new BigDecimal("12345.123456789000"),
-                new Long(1233398764000L-tzOffset),
-                new Long(1233332866000L) // The last column is a dbunit-date-formatted column in the excel sheet
-                };
+                Long.valueOf(1233398764000L - tzOffset),
+                Long.valueOf(1233332866000L) // The last column is a
+                                             // dbunit-date-formatted column in
+                                             // the excel sheet
+        };
 
-        Column[] columns = table.getTableMetaData().getColumns();
-        assertEquals("column count", expected.length, columns.length);
+        final Column[] columns = table.getTableMetaData().getColumns();
+        assertThat(columns).as("column count").hasSameSizeAs(expected);
         for (int i = 0; i < columns.length; i++)
         {
-            Object actual = table.getValue(row, columns[i].getColumnName());
-            String typesResult = " expected=" + (expected[i]!=null ? expected[i].getClass().getName() : "null") + " - actual=" 
-                                    + (actual!=null ? actual.getClass().getName() : "null");
-            assertEquals("value " + i + " (" + typesResult + ")", expected[i], actual);
+            final Object actual =
+                    table.getValue(row, columns[i].getColumnName());
+            final String typesResult = " expected="
+                    + (expected[i] != null ? expected[i].getClass().getName()
+                            : "null")
+                    + " - actual="
+                    + (actual != null ? actual.getClass().getName() : "null");
+            assertThat(actual).as("value " + i + " (" + typesResult + ")")
+                    .isEqualTo(expected[i]);
         }
     }
 
-    public void testNumberAsText() throws Exception
+    @Test
+    void testNumberAsText() throws Exception
     {
-        int row = 0;
-        ITable table = createDataSet().getTable("TABLE_NUMBER_AS_TEXT");
-        
-        String[] expected = {
-        		"0",
-        		"666",
-        		"66.6",
-        		"66.6",
-        		"-6.66"
-                };
+        final int row = 0;
+        final ITable table = createDataSet().getTable("TABLE_NUMBER_AS_TEXT");
 
-        Column[] columns = table.getTableMetaData().getColumns();
-        assertEquals("column count", expected.length, columns.length);
+        final String[] expected = {"0", "666", "66.6", "66.6", "-6.66"};
+
+        final Column[] columns = table.getTableMetaData().getColumns();
+        assertThat(columns).as("column count").hasSameSizeAs(expected);
         for (int i = 0; i < columns.length; i++)
         {
-        	String columnName = columns[i].getColumnName();
-            Object actual = table.getValue(row, columnName).toString();
-            assertEquals(columns[i].getColumnName(),expected[i],actual);
+            final String columnName = columns[i].getColumnName();
+            final Object actual = table.getValue(row, columnName).toString();
+            assertThat(actual).as(columns[i].getColumnName())
+                    .isEqualTo(expected[i]);
         }
     }
 }
