@@ -21,6 +21,12 @@
 
 package org.dbunit.operation;
 
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+
+import java.io.FileReader;
+import java.io.Reader;
+
 import org.dbunit.AbstractDatabaseIT;
 import org.dbunit.database.DatabaseConfig;
 import org.dbunit.database.MockDatabaseConnection;
@@ -38,10 +44,7 @@ import org.dbunit.dataset.NoPrimaryKeyException;
 import org.dbunit.dataset.datatype.DataType;
 import org.dbunit.dataset.xml.XmlDataSet;
 import org.dbunit.testutil.TestUtils;
-
-import java.io.File;
-import java.io.FileReader;
-import java.io.Reader;
+import org.junit.jupiter.api.Test;
 
 /**
  * @author Manuel Laflamme
@@ -50,51 +53,47 @@ import java.io.Reader;
  */
 public class DeleteOperationIT extends AbstractDatabaseIT
 {
-    public DeleteOperationIT(String s)
+
+    @Test
+    void testMockExecute() throws Exception
     {
-        super(s);
-    }
+        final String schemaName = "schema";
+        final String tableName1 = "table1";
+        final String tableName2 = "table2";
+        final String[] expected = {
+                "delete from schema.table2 where c2 = 1234 and c1 = 'toto'",
+                "delete from schema.table2 where c2 = 123.45 and c1 = 'qwerty'",
+                "delete from schema.table1 where c2 = 1234 and c1 = 'toto'",
+                "delete from schema.table1 where c2 = 123.45 and c1 = 'qwerty'",};
 
-    public void testMockExecute() throws Exception
-    {
-        String schemaName = "schema";
-        String tableName1 = "table1";
-        String tableName2 = "table2";
-        String[] expected = {
-            "delete from schema.table2 where c2 = 1234 and c1 = 'toto'",
-            "delete from schema.table2 where c2 = 123.45 and c1 = 'qwerty'",
-            "delete from schema.table1 where c2 = 1234 and c1 = 'toto'",
-            "delete from schema.table1 where c2 = 123.45 and c1 = 'qwerty'",
-        };
+        final Column[] columns =
+                new Column[] {new Column("c1", DataType.VARCHAR),
+                        new Column("c2", DataType.NUMERIC),
+                        new Column("c3", DataType.BOOLEAN),};
+        final String[] primaryKeys = {"c2", "c1"};
 
-        Column[] columns = new Column[]{
-            new Column("c1", DataType.VARCHAR),
-            new Column("c2", DataType.NUMERIC),
-            new Column("c3", DataType.BOOLEAN),
-        };
-        String[] primaryKeys = {"c2", "c1"};
-
-        DefaultTable table1 = new DefaultTable(new DefaultTableMetaData(
-                tableName1, columns, primaryKeys));
-        table1.addRow(new Object[]{"qwerty", new Double("123.45"), "true"});
-        table1.addRow(new Object[]{"toto", "1234", Boolean.FALSE});
-        DefaultTable table2 = new DefaultTable(new DefaultTableMetaData(
-                tableName2, columns, primaryKeys));
+        final DefaultTable table1 = new DefaultTable(
+                new DefaultTableMetaData(tableName1, columns, primaryKeys));
+        table1.addRow(
+                new Object[] {"qwerty", Double.valueOf("123.45"), "true"});
+        table1.addRow(new Object[] {"toto", "1234", Boolean.FALSE});
+        final DefaultTable table2 = new DefaultTable(
+                new DefaultTableMetaData(tableName2, columns, primaryKeys));
         table2.addTableRows(table1);
-        IDataSet dataSet = new DefaultDataSet(table1, table2);
+        final IDataSet dataSet = new DefaultDataSet(table1, table2);
 
         // setup mock objects
-        MockBatchStatement statement = new MockBatchStatement();
+        final MockBatchStatement statement = new MockBatchStatement();
         statement.addExpectedBatchStrings(expected);
         statement.setExpectedExecuteBatchCalls(2);
         statement.setExpectedClearBatchCalls(2);
         statement.setExpectedCloseCalls(2);
 
-        MockStatementFactory factory = new MockStatementFactory();
+        final MockStatementFactory factory = new MockStatementFactory();
         factory.setExpectedCreatePreparedStatementCalls(2);
         factory.setupStatement(statement);
 
-        MockDatabaseConnection connection = new MockDatabaseConnection();
+        final MockDatabaseConnection connection = new MockDatabaseConnection();
         connection.setupDataSet(dataSet);
         connection.setupSchema(schemaName);
         connection.setupStatementFactory(factory);
@@ -108,48 +107,47 @@ public class DeleteOperationIT extends AbstractDatabaseIT
         connection.verify();
     }
 
-    public void testExecuteWithEscapedNames() throws Exception
+    @Test
+    void testExecuteWithEscapedNames() throws Exception
     {
-        String schemaName = "schema";
-        String tableName = "table";
-        String[] expected = {
-            "delete from [schema].[table] where [c2] = 123.45 and [c1] = 'qwerty'",
-            "delete from [schema].[table] where [c2] = 1234 and [c1] = 'toto'",
-        };
+        final String schemaName = "schema";
+        final String tableName = "table";
+        final String[] expected = {
+                "delete from [schema].[table] where [c2] = 123.45 and [c1] = 'qwerty'",
+                "delete from [schema].[table] where [c2] = 1234 and [c1] = 'toto'",};
 
-        Column[] columns = new Column[]{
-            new Column("c1", DataType.VARCHAR),
-            new Column("c2", DataType.NUMERIC),
-            new Column("c3", DataType.BOOLEAN),
-        };
-        String[] primaryKeys = {"c2", "c1"};
+        final Column[] columns =
+                new Column[] {new Column("c1", DataType.VARCHAR),
+                        new Column("c2", DataType.NUMERIC),
+                        new Column("c3", DataType.BOOLEAN),};
+        final String[] primaryKeys = {"c2", "c1"};
 
-        DefaultTable table = new DefaultTable(new DefaultTableMetaData(
-                tableName, columns, primaryKeys));
-        table.addRow(new Object[]{"toto", "1234", Boolean.FALSE});
-        table.addRow(new Object[]{"qwerty", new Double("123.45"), "true"});
-        IDataSet dataSet = new DefaultDataSet(table);
+        final DefaultTable table = new DefaultTable(
+                new DefaultTableMetaData(tableName, columns, primaryKeys));
+        table.addRow(new Object[] {"toto", "1234", Boolean.FALSE});
+        table.addRow(new Object[] {"qwerty", Double.valueOf("123.45"), "true"});
+        final IDataSet dataSet = new DefaultDataSet(table);
 
         // setup mock objects
-        MockBatchStatement statement = new MockBatchStatement();
+        final MockBatchStatement statement = new MockBatchStatement();
         statement.addExpectedBatchStrings(expected);
         statement.setExpectedExecuteBatchCalls(1);
         statement.setExpectedClearBatchCalls(1);
         statement.setExpectedCloseCalls(1);
 
-        MockStatementFactory factory = new MockStatementFactory();
+        final MockStatementFactory factory = new MockStatementFactory();
         factory.setExpectedCreatePreparedStatementCalls(1);
         factory.setupStatement(statement);
 
-        MockDatabaseConnection connection = new MockDatabaseConnection();
+        final MockDatabaseConnection connection = new MockDatabaseConnection();
         connection.setupDataSet(dataSet);
         connection.setupSchema(schemaName);
         connection.setupStatementFactory(factory);
         connection.setExpectedCloseCalls(0);
 
         // execute operation
-        connection.getConfig().setProperty(
-                DatabaseConfig.PROPERTY_ESCAPE_PATTERN, "[?]");
+        connection.getConfig()
+                .setProperty(DatabaseConfig.PROPERTY_ESCAPE_PATTERN, "[?]");
         new DeleteOperation().execute(connection, dataSet);
 
         statement.verify();
@@ -157,18 +155,19 @@ public class DeleteOperationIT extends AbstractDatabaseIT
         connection.verify();
     }
 
-    public void testExecuteWithEmptyTable() throws Exception
+    @Test
+    void testExecuteWithEmptyTable() throws Exception
     {
-        Column[] columns = {new Column("c1", DataType.VARCHAR)};
-        ITable table = new DefaultTable(new DefaultTableMetaData(
-                "name", columns, columns));
-        IDataSet dataSet = new DefaultDataSet(table);
+        final Column[] columns = {new Column("c1", DataType.VARCHAR)};
+        final ITable table = new DefaultTable(
+                new DefaultTableMetaData("name", columns, columns));
+        final IDataSet dataSet = new DefaultDataSet(table);
 
         // setup mock objects
-        MockStatementFactory factory = new MockStatementFactory();
+        final MockStatementFactory factory = new MockStatementFactory();
         factory.setExpectedCreatePreparedStatementCalls(0);
 
-        MockDatabaseConnection connection = new MockDatabaseConnection();
+        final MockDatabaseConnection connection = new MockDatabaseConnection();
         connection.setupDataSet(dataSet);
         connection.setupStatementFactory(factory);
         connection.setExpectedCloseCalls(0);
@@ -180,65 +179,61 @@ public class DeleteOperationIT extends AbstractDatabaseIT
         connection.verify();
     }
 
-    public void testExecuteAndNoPrimaryKey() throws Exception
+    @Test
+    void testExecuteAndNoPrimaryKey() throws Exception
     {
-        IDataSet dataSet = _connection.createDataSet();
-        ITableMetaData metaData = dataSet.getTableMetaData("TEST_TABLE");
-        try
-        {
-            new DeleteOperation().getOperationData(
-                    metaData, null, _connection);
-            fail("Should throw a NoPrimaryKeyException");
-        }
-        catch (NoPrimaryKeyException e)
-        {
-        }
+        final IDataSet dataSet = _connection.createDataSet();
+        final ITableMetaData metaData = dataSet.getTableMetaData("TEST_TABLE");
+        assertThrows(
+                NoPrimaryKeyException.class, () -> new DeleteOperation()
+                        .getOperationData(metaData, null, _connection),
+                "Should throw a NoPrimaryKeyException");
     }
 
-    public void testExecute() throws Exception
+    @Test
+    void testExecute() throws Exception
     {
-        Reader in = new FileReader(
+        final Reader in = new FileReader(
                 TestUtils.getFile("xml/deleteOperationTest.xml"));
-        IDataSet dataSet = new XmlDataSet(in);
+        final IDataSet dataSet = new XmlDataSet(in);
 
         testExecute(dataSet);
 
     }
 
-    public void testExecuteCaseInsensitive() throws Exception
+    @Test
+    void testExecuteCaseInsensitive() throws Exception
     {
-        Reader in = new FileReader(
+        final Reader in = new FileReader(
                 TestUtils.getFile("xml/deleteOperationTest.xml"));
-        IDataSet dataSet = new XmlDataSet(in);
+        final IDataSet dataSet = new XmlDataSet(in);
 
         testExecute(new LowerCaseDataSet(dataSet));
     }
 
-    private void testExecute(IDataSet dataSet) throws Exception
+    void testExecute(final IDataSet dataSet) throws Exception
     {
-        String tableName = "PK_TABLE";
-        String columnName = "PK0";
+        final String tableName = "PK_TABLE";
+        final String columnName = "PK0";
 
         // verify table before
-        ITable tableBefore = createOrderedTable(tableName, columnName);
-        assertEquals("row count before", 3, tableBefore.getRowCount());
-        assertEquals("before", "0", tableBefore.getValue(0, columnName).toString());
-        assertEquals("before", "1", tableBefore.getValue(1, columnName).toString());
-        assertEquals("before", "2", tableBefore.getValue(2, columnName).toString());
+        final ITable tableBefore = createOrderedTable(tableName, columnName);
+        assertThat(tableBefore.getRowCount()).as("row count before")
+                .isEqualTo(3);
+        assertThat(tableBefore.getValue(0, columnName)).as("before")
+                .hasToString("0");
+        assertThat(tableBefore.getValue(1, columnName)).as("before")
+                .hasToString("1");
+        assertThat(tableBefore.getValue(2, columnName)).as("before")
+                .hasToString("2");
 
         DatabaseOperation.DELETE.execute(_connection, dataSet);
 
-        ITable tableAfter = createOrderedTable(tableName, columnName);
-        assertEquals("row count after", 2, tableAfter.getRowCount());
-        assertEquals("after", "0", tableAfter.getValue(0, columnName).toString());
-        assertEquals("after", "2", tableAfter.getValue(1, columnName).toString());
+        final ITable tableAfter = createOrderedTable(tableName, columnName);
+        assertThat(tableAfter.getRowCount()).as("row count after").isEqualTo(2);
+        assertThat(tableAfter.getValue(0, columnName)).as("after")
+                .hasToString("0");
+        assertThat(tableAfter.getValue(1, columnName)).as("after")
+                .hasToString("2");
     }
 }
-
-
-
-
-
-
-
-
